--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.0.0",
     "framer-motion": "^10.13.0",
     "next": "13.4.12",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "postcss": "^8.4.27",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
