--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.0.0",
+    "axios": "^1.4.0",
     "framer-motion": "^10.13.0",
     "next": "13.4.12",
     "react": "18.2.0",
